@@ -37,6 +37,8 @@ Changes in version 1.3.0:
 * Implemented setting of secondary slave address (alias) via sysfs.
 * Implemented SDO reading in operation mode via sysfs.
 * Removed annoying eeprom_write_enable file. EEPROM writing always enabled.
+* Master state machine scheduled with timeout if idle, otherwise is executed
+  as fast as possible (with schedule()).
 * Removed EtherCAT line comments from 8139too drivers.
 
 -------------------------------------------------------------------------------
